# component_map_editor

./: .gitignore  CMakeLists.txt  PR1_PR2_COMPLETION_SUMMARY.md  README.md
component_map_editor/: CMakeLists.txt
component_map_editor/adapters/: AdapterCommon.h  CommandAdapter.cpp  CommandAdapter.h  CommandAdapterRegistry.cpp  CommandAdapterRegistry.h  ExecutionAdapter.cpp  ExecutionAdapter.h  GraphAdapter.cpp  GraphAdapter.h  PolicyAdapter.cpp  PolicyAdapter.h  ValidationAdapter.cpp  ValidationAdapter.h
component_map_editor/commands/: GraphCommand.h  GraphCommands.cpp  GraphCommands.h  UndoStack.cpp  UndoStack.h
component_map_editor/extensions/contracts/: ConnectionPolicyProviderV1ToV2Adapter.cpp  ConnectionPolicyProviderV1ToV2Adapter.h  ExecutionSemanticsV0Adapter.cpp  ExecutionSemanticsV0Adapter.h  ExtensionApiVersion.cpp  ExtensionApiVersion.h  ExtensionContractRegistry.cpp  ExtensionContractRegistry.h  ExtensionManifest.cpp  ExtensionManifest.h  IActionProvider.h  IComponentTypeProvider.h  IConnectionPolicyProvider.h  IConnectionPolicyProviderV2.h  IExecutionSemanticsProvider.h  IExecutionSemanticsProviderV0.h  IExtensionPack.h  INodeTypeProvider.h  IPropertySchemaProvider.h  IValidationProvider.h  IValidationProviderV2.h  ValidationProviderV1ToV2Adapter.cpp  ValidationProviderV1ToV2Adapter.h
component_map_editor/extensions/runtime/: CompositeExecutionProvider.cpp  CompositeExecutionProvider.h  ExtensionCompatibilityChecker.cpp  ExtensionCompatibilityChecker.h  ExtensionManifestJson.cpp  ExtensionManifestJson.h  ExtensionStartupLoader.cpp  ExtensionStartupLoader.h  PropertySchemaRegistry.cpp  PropertySchemaRegistry.h  PublicApiContractAdapter.cpp  PublicApiContractAdapter.h  TypeRegistry.cpp  TypeRegistry.h
component_map_editor/extensions/runtime/rules/: RuleBackedProviders.h  RuleCompiler.cpp  RuleCompiler.h  RuleDslTypes.h  RuleHotReloadService.cpp  RuleHotReloadService.h  RuleRuntimeEngine.cpp  RuleRuntimeEngine.h  RuleRuntimeRegistry.cpp  RuleRuntimeRegistry.h
component_map_editor/extensions/sample_pack/: LegacyV0ExecutionSemanticsProvider.cpp  LegacyV0ExecutionSemanticsProvider.h  LegacyV0ExtensionPack.cpp  LegacyV0ExtensionPack.h  SampleActionProvider.cpp  SampleActionProvider.h  SampleComponentTypeProvider.cpp  SampleComponentTypeProvider.h  SampleConnectionPolicyProvider.cpp  SampleConnectionPolicyProvider.h  SampleExecutionSemanticsProvider.cpp  SampleExecutionSemanticsProvider.h  SampleExtensionPack.cpp  SampleExtensionPack.h  SampleNodeTypeProvider.cpp  SampleNodeTypeProvider.h  SamplePropertySchemaProvider.cpp  SamplePropertySchemaProvider.h  SampleValidationProvider.cpp  SampleValidationProvider.h  manifest.sample.workflow.json  manifest.sample.workflow.legacy_v0.json  rules.sample.workflow.json
component_map_editor/models/: ComponentModel.cpp  ComponentModel.h  ConnectionModel.cpp  ConnectionModel.h  EdgeModel.h  GraphModel.cpp  GraphModel.h  NodeModel.h
component_map_editor/routing/: OrthogonalHeuristicStrategy.cpp  OrthogonalHeuristicStrategy.h  RouteTypes.h  RoutingEngine.cpp  RoutingEngine.h  RoutingHelpers.cpp  RoutingHelpers.h
component_map_editor/services/: ActionInvocationService.cpp  ActionInvocationService.h  CapabilityRegistry.cpp  CapabilityRegistry.h  CommandGateway.cpp  CommandGateway.h  ExecutionMigrationFlags.cpp  ExecutionMigrationFlags.h  ExportService.cpp  ExportService.h  GraphEditorController.cpp  GraphEditorController.h  GraphExecutionSandbox.cpp  GraphExecutionSandbox.h  GraphJsonMigration.cpp  GraphJsonMigration.h  GraphSchema.cpp  GraphSchema.h  InvariantChecker.cpp  InvariantChecker.h  MemoryMonitor.cpp  MemoryMonitor.h  PerformanceBudgets.cpp  PerformanceBudgets.h  TraversalEngine.cpp  TraversalEngine.h  ValidationService.cpp  ValidationService.h
component_map_editor/transport/: GrpcCommandTransport.cpp  GrpcCommandTransport.h  GrpcTemplateDescriptorTransport.cpp  GrpcTemplateDescriptorTransport.h
component_map_editor/ui/: ComponentItem.qml  Connection.qml  ConnectionHandler.qml  GraphCanvas.qml  GraphCanvasMath.js  GraphStatusBar.qml  GraphViewportItem.cpp  GraphViewportItem.h  Palette.qml  PropertyPanel.qml  ResizableItem.qml
component_map_editor/ui/items/: Arrow.qml
component_map_editor/ui/qml/: ComponentItem.qml  GraphCanvas.qml  GraphCanvasMath.js  GraphStatusBar.qml  InteractionStateManager.qml  Palette.qml  PerformanceTelemetry.qml  PropertyPanel.qml  SchemaFormRenderer.qml
component_map_editor/ui/rendering/: ComponentRenderPass.cpp  ComponentRenderPass.h  ConnectionRenderPass.cpp  ConnectionRenderPass.h  EdgeRenderPass.cpp  EdgeRenderPass.h  GridRenderPass.cpp  GridRenderPass.h  LabelRenderPass.cpp  LabelRenderPass.h  LabelTextureBuilder.cpp  LabelTextureBuilder.h  LabelTextureNode.h  NodeRenderPass.cpp  NodeRenderPass.h
componentmapeditor/: CMakeLists.txt
componentmapeditor/commands/: GraphCommand.h  GraphCommands.cpp
componentmapeditor/models/: EdgeModel.cpp
componentmapeditor/services/: ExportService.h  ValidationService.h
componentmapeditor/ui/: Edge.qml  GraphCanvas.qml  Node.qml  PropertyPanel.qml
customize_example/: .qmlls.ini  CMakeLists.txt  REAME.md  WORKFLOW_GUIDELINE_NEWTON_QUARTIC.md  main.cpp
customize_example/qml/: Main.qml
example/: BenchmarkHelper.cpp  BenchmarkHelper.h  BenchmarkPanel.qml  CMakeLists.txt  FrameSwapTelemetry.cpp  FrameSwapTelemetry.h  Main.qml  README.md  compatibility_checker_main.cpp  main.cpp  main.qml
jobdesigner/: CMakeLists.txt
jobdesigner/commands/: GraphCommand.h  GraphCommands.h  UndoStack.h
jobdesigner/models/: EdgeModel.h  GraphModel.h  NodeModel.cpp  NodeModel.h
jobdesigner/services/: ExportService.cpp
jobdesigner/ui/: Edge.qml  GraphCanvas.qml  Node.qml  Palette.qml  PropertyPanel.qml
proto/: CMakeLists.txt  command.proto  execution.proto  graph.proto  policy.proto  provider_templates.proto  public_api.proto  validation.proto
qml_fontawesome/: CMakeLists.txt  README.md
qml_fontawesome/cmake/: QmlFontAwesomeConfig.cmake.in
qml_fontawesome/qml/: FaIcon.qml
qml_fontawesome/src/: FontAwesome.cpp  FontAwesome.h
(+92 files in other folders)
